# saan

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
crates/saan_cli/: Cargo.toml
crates/saan_cli/src/: main.rs
crates/saan_cli/src/commands/: apply.rs  init.rs  inspect.rs  interlace.rs  mod.rs  prepare.rs  query.rs  view.rs
crates/saan_cli/tests/: cli_integration.rs
crates/saan_core/: Cargo.toml
crates/saan_core/src/: graph.rs  html.rs  lib.rs  render.rs  store.rs  strand.rs
crates/saan_core/src/shaver/: mod.rs  sql.rs
crates/saan_core/tests/: integration_test.rs
crates/saan_core/tests/fixtures/sql/: orders_pipeline.sql  with_cte.sql
crates/saan_mesh/: Cargo.toml
crates/saan_mesh/src/: lib.rs
crates/saan_py/: Cargo.toml
crates/saan_py/src/: connection.rs  lib.rs  query_result.rs  report.rs
docs/: IMPLEMENTATION_PLAN.md  ROADMAP.md  TECHNICAL_SPECIFICATIONS.md
sdk/python/: pyproject.toml  setup.py
sdk/python/saan_ops/: __init__.py
sdk/python/tests/: test_package.py
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx
web/src/components/: GraphView.tsx
