[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "saan-ops"
version = "0.1.0"
description = "Python SDK for Saan — The Hand"
requires-python = ">=3.9"
dependencies = [
    # "duckdb",
    # "polars",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
